dfir_rs/tests/compile-fail/surface_singleton_nostate.stderr
error: Cannot reference operator `null`. Only singleton-producing operators can be referenced.
 --> tests/compile-fail/surface_singleton_nostate.rs:7:40
  |
7 |             -> filter(|value| value <= #my_ref.as_reveal_ref())
  |                                        ^^^^^^^
